# pyciteas

./: .gitignore  README.md  pyciteas.ini  pyproject.toml  requirements.txt
src/pyciteas/: __init__.py  citations.py  config.py  request.py  status.py
test/: test_citations.py  test_request.py  test_status.py
