[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyciteas"
authors = [{name = "Sam Boysel", email = "sboysel@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)"]
dynamic = ["version", "description"]
dependencies = [
    "urllib3 >=1.26.12"
]

[project.optional-dependencies]
test = [
    "pytest >=7.1.3",
    "pytest-cov >=4.0.0"
]
